--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
         "vite": "^6.0"
     },
     "dependencies": {
+        "@fullcalendar/core": "^6.1.15",
+        "@fullcalendar/daygrid": "^6.1.15",
+        "@fullcalendar/interaction": "^6.1.15",
         "aos": "^2.3.4",
         "bootstrap": "^5.3.3"
     }
