--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
         "@fullcalendar/core": "^6.1.15",
         "@fullcalendar/daygrid": "^6.1.15",
         "@fullcalendar/interaction": "^6.1.15",
+        "@fullcalendar/timegrid": "^6.1.15",
         "aos": "^2.3.4",
-        "bootstrap": "^5.3.3"
+        "bootstrap": "^5.3.3",
+        "sweetalert2": "^11.15.10"
     }
 }
